--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://strongbaass.github.ionp/e-sneakers",
+  "homepage": "https://strongbaass.github.io/e-sneakers/",
   "name": "e-comwebsite",
   "version": "0.1.0",
   "private": true,
@@ -19,8 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
